# IndeksyGSR

./: .gitignore  IndeksyGSR_prezentacja  -  naprawiony.pptx  IndeksyGSR_prezentacja.pptx  README.md  install.py  pyproject.toml  setup.py  storage.json  ~$IndeksyGSR_prezentacja  -  naprawiony.pptx
backend/: pyproject.toml
backend/app/: __init__.py  dashboard.py  main.py
backend/app/api/: models.py  search.py  segments.py
backend/app/core/: extractors.py  scraper.py  search.py  search_selection.py  suggest.py
backend/app/pipeline/: enums.py  parse_email.py  scrape.py  scrape_BeautifulSoup.py  vectorize.py
backend/app/routers/: check_my_config.py  check_my_headers.py
backend/app/services/: embedding_client.py  embedding_service.py  firestore.py  gcs.py  gdrive.py  groq_client.py  qdrant.py
docs/: implementation_plan_wektoryzacja.md  opisy_mat_4727-PR-5510-01W_rev0.xlsx  plan_frontend.md  plan_proponowanie_indeksow.md  plan_usprawnienia_wyszukiwania.md
frontend/: index.html
frontend/src/: App.tsx  main.tsx
frontend/src/api/: search.ts  segments.ts
frontend/src/components/: DescGenPanel.tsx  DropZone.tsx  FileUploader.tsx  Layout.tsx  OptionsPanel.tsx  ProposalCard.tsx  ResultCard.tsx  SearchResults.tsx  SegmentForm.tsx  Sidebar.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: BulkSearchPage.tsx  ProposalsPage.tsx  SearchByUrlPage.tsx  SearchPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: generate_presentation.py
